<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grp.application.pages.ReportFragment"
    android:paddingBottom="90dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tabGravity="start"
            app:tabSelectedTextColor="@color/main_color"
            app:tabIndicatorColor="@color/main_color">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly" />
        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/healthReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/health_report"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:scaleType="fitXY"
            android:layout_width="220dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:src="@drawable/test_01"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            android:layout_marginBottom="40dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:scaleType="fitXY"
            android:layout_width="220dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:src="@drawable/test_01"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            android:layout_marginBottom="40dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:scaleType="fitXY"
            android:layout_width="220dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:src="@drawable/test_01"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">


        <Button
            android:id="@+id/button_save"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="start"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/main_color"/>

        <Button
            android:id="@+id/button_export"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/export"
            android:layout_gravity="end"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/main_color"/>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>