<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grp.application.pages.SettingsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/real_time_data"

            android:textSize="22sp"

            android:layout_marginBottom="80dp"/>

        <ImageView
            android:id="@+id/imageView1"
            android:scaleType="fitXY"
            android:layout_width="220dp"
            android:layout_height="150dp"
            android:src="@drawable/test_01"
            android:layout_gravity="center"
            android:contentDescription="@string/ecg"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ECG"
            android:textSize="16sp"
            android:layout_marginBottom="40dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:scaleType="fitXY"
            android:layout_width="220dp"
            android:layout_height="150dp"
            android:src="@drawable/test_01"
            android:layout_gravity="center"
            android:contentDescription="@string/heart_rate"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/heart_rate"
            android:textSize="16sp"
            android:layout_marginBottom="60dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/startCaptureDataSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Capture Data"
            android:textColor="@color/main_color"
            android:textSize="14sp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="110dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>